@@ -219,7 +219,7 @@ IF(DEBUG)
   OPTION(DEBUG_FILTER    "enable filter debugging"      OFF)
 
   IF(EFENCE)
-    FIND_LIBRARY(EFENCE_LIB NAMES efence PATHS /usr/lib /usr/local/lib)
+    FIND_LIBRARY(EFENCE_LIB efence PATHS /usr/lib /usr/local/lib)
     IF(EFENCE_LIB MATCHES "NOTFOUND")
       MESSAGE("Electric Fence not installed - disabled.")
       SET(EFENCE OFF CACHE BOOL "" FORCE)
@@ -410,7 +410,7 @@ int main(){return 0;}
     ELSE(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
 
       IF(${BACKEND_OPTION}_LIBS MATCHES "^$")
-        FIND_LIBRARY(${BACKEND_OPTION}_LIBS NAMES ${BACKEND_LIB} PATHS /usr/lib /usr/local/lib)
+        FIND_LIBRARY(${BACKEND_OPTION}_LIBS ${BACKEND_LIB} PATHS /usr/lib /usr/local/lib)
       ENDIF(${BACKEND_OPTION}_LIBS MATCHES "^$")
 
       IF(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
@@ -522,7 +522,7 @@ IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86" OR CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
 
   IF(CMAKE_SYSTEM_MACHINE MATCHES "i.86")
     # nasm stuff
-    FIND_PROGRAM(HAVE_NASM NAMES nasm)
+    FIND_PROGRAM(HAVE_NASM nasm)
 
     IF(NOT HAVE_NASM MATCHES "NOTFOUND")
       PROJECT(OpenAL ASM)
@@ -652,14 +652,37 @@ INSTALL_FILES(/include/AL FILES common/include/AL/al.h
 IF(BUILD_TESTS)
   # need CXX for testcpp only
   PROJECT(OpenAL CXX)
-  FIND_LIBRARY(ALUT_LIB NAMES alut PATHS /usr/lib /usr/local/lib ${ALUT_LIB_DIR})
-  SET(CMAKE_REQUIRED_INCLUDES ${ALUT_INCLUDE_DIR})
-  CHECK_INCLUDE_FILE(AL/alut.h HAVE_ALUT_H)
-  SET(CMAKE_REQUIRED_INCLUDES "")
 
-  IF(ALUT_LIB MATCHES "NOTFOUND" OR NOT HAVE_ALUT_H)
-    MESSAGE("alut not installed, cannot build tests")
-  ELSE(ALUT_LIB MATCHES "NOTFOUND" OR NOT HAVE_ALUT_H)
+  IF(DEFINED ALUT_LIB_DIR)
+    FIND_LIBRARY(ALUT_LIB alut PATHS ${ALUT_LIB_DIR}
+      NO_CMAKE_ENVIRONMENT_PATH
+      NO_CMAKE_PATH
+      NO_SYSTEM_PATH
+      NO_CMAKE_SYSTEM_PATH)
+  ENDIF(DEFINED ALUT_LIB_DIR)
+
+  IF(NOT DEFINED ALUT_LIB_DIR OR ALUT_LIB MATCHES "NOTFOUND")
+    FIND_LIBRARY(ALUT_LIB alut PATHS /usr/lib /usr/local/lib)
+  ENDIF(NOT DEFINED ALUT_LIB_DIR OR ALUT_LIB MATCHES "NOTFOUND")
+
+  IF(DEFINED ALUT_INCLUDE_DIR)
+    FIND_FILE(ALUT_H AL/alut.h PATHS ${ALUT_INCLUDE_DIR}
+      NO_CMAKE_ENVIRONMENT_PATH
+      NO_CMAKE_PATH
+      NO_SYSTEM_PATH
+      NO_CMAKE_SYSTEM_PATH)
+  ENDIF(DEFINED ALUT_INCLUDE_DIR)
+
+  IF(NOT DEFINED ALUT_INCLUDE_DIR OR ALUT_H MATCHES "NOTFOUND")
+    FIND_FILE(ALUT_H AL/alut.h)
+  ENDIF(NOT DEFINED ALUT_INCLUDE_DIR OR ALUT_H MATCHES "NOTFOUND")
+
+  IF(ALUT_LIB MATCHES "NOTFOUND" OR ALUT_H MATCHES "NOTFOUND")
+    MESSAGE("alut not found, cannot build tests")
+  ELSE(ALUT_LIB MATCHES "NOTFOUND" OR ALUT_H MATCHES "NOTFOUND")
+
+    MESSAGE(STATUS "Using alut header ${ALUT_H}")
+    MESSAGE(STATUS "Using alut lib ${ALUT_LIB}")
 
     IF(DEFINED ALUT_INCLUDE_DIR)
       INCLUDE_DIRECTORIES(${ALUT_INCLUDE_DIR})
@@ -745,7 +768,7 @@ IF(BUILD_TESTS)
     FOREACH(TESTDATUM ${TESTDATA})
       CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/test/${TESTDATUM} ${CMAKE_BINARY_DIR}/${TESTDATUM} COPYONLY)
     ENDFOREACH(TESTDATUM)
-  ENDIF(ALUT_LIB MATCHES "NOTFOUND" OR NOT HAVE_ALUT_H)
+  ENDIF(ALUT_LIB MATCHES "NOTFOUND" OR  ALUT_H MATCHES "NOTFOUND")
 ENDIF(BUILD_TESTS)
 
 
@@ -766,7 +789,7 @@ INSTALL_FILES(/lib/pkgconfig FILES admin/pkgconfig/openal.pc)
 
 # info file
 IF(UNIX)
-  FIND_PROGRAM(MAKEINFO_PRG NAMES makeinfo)
+  FIND_PROGRAM(MAKEINFO_PRG makeinfo)
   IF(NOT MAKEINFO_PRG MATCHES "NOTFOUND")
     IF(NOT EXISTS ${CMAKE_BINARY_DIR}/doc)
       MAKE_DIRECTORY(${CMAKE_BINARY_DIR}/doc)
